# EuroEval

./: .dockerignore  .env.example  Makefile  README.md  constraints.txt  pyproject.toml
.github/workflows/: docker-build.yml
docker/: Dockerfile  Dockerfile.cpu
examples/: run_local.sh
scripts/: entrypoint.sh
src/euroeval_runner/: cli.py  preload_datasets.py
